<resources>
    <string name="app_name">玩</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_home">首页</string>
    <string name="title_chapter">知识</string>
    <string name="title_weixin">公众号</string>
    <string name="title_project">项目</string>
    <string name="title_nav">导航</string>
    <string name="title_mine">我的</string>

    <string name="no_data">暂无数据</string>
    <string name="retry">加载失败，点击屏幕重试</string>
    <string name="error_network">网络失败，请重试</string>

    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="username_input_hint">用户名</string>
    <string name="password_input_hint">密码</string>
    <string name="confirm_input_hint">确认密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="goto_login">已有账号?去登录</string>
    <string name="goto_register">还没有账号?注册一个</string>
    <string name="error_username_empty">用户名不能为空</string>
    <string name="error_password_empty">密码不能为空</string>
    <string name="error_confirm_empty">确认密码不能为空</string>
    <string name="error_password_diff">两次密码不一致</string>
    <string name="error_password_length">密码长度6~18位</string>
</resources>
