<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.xinzy.kotlin.wan.biz.user.viewmodel.RegisterViewModel" />
        <variable
            name="viewModel"
            type="RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".biz.user.RegisterActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                app:title="@string/title_register" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginTop="100dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:hint="@string/username_input_hint"
                    android:text="@={viewModel.username}"
                    app:onTextChangedConsumer="@{viewModel::onClearError}"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:hint="@string/password_input_hint"
                    android:text="@={viewModel.password}"
                    app:onTextChangedConsumer="@{viewModel::onClearError}" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_input_hint"
                    android:text="@={viewModel.confirm}"
                    app:onTextChangedConsumer="@{viewModel::onClearError}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"
                    android:text="@{viewModel.errorMessage}"
                    app:isVisible="@{viewModel.errorMessage.length() > 0}"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/bg_simple_btn"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/register"
                    app:onClickAction="@{viewModel::onRegister}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="16dp"
                    android:onClick="onLogin"
                    android:text="@string/goto_login"
                    android:textSize="12sp"
                    android:textColor="#999" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>